--- a/personal_web_page/resources/css/style.css
+++ b/personal_web_page/resources/css/style.css
@@ -325,6 +325,9 @@ textarea {
     font-size: 250%;
 }
 
+ion-icon {
+  color: #848484;
+}
 
 
 /* -----------------------------FOOTER-------------------------- */
