--- a/personal_web_page/resources/css/style.css
+++ b/personal_web_page/resources/css/style.css
@@ -78,12 +78,13 @@ h2:after {
     height: 2px;
     background-color: #e67e22;
     content: " ";
-    width: 160px;
+    width: 170px;
     margin-bottom: 30px;
    
 }
 
 h3 {
+    margin-top: -60px;
     font-weight: 400;
     font-size:150%;
     word-spacing: 4px;
@@ -107,6 +108,7 @@ h4 {
     font-size: 90%;
     margin-bottom: 7px;
     word-spacing: 2px;
+    margin-left: 4px
 }
 /* ------------------------- */
 /* HEADINGS */
@@ -116,7 +118,7 @@ h4 {
     display: grid;
     grid-template-columns: repeat(2, minmax(220px, 200px));
     padding: 0px;
-    margin: 40px 80px 0px;
+    margin: 0px 80px 0px;
 }
 
 .tech {
@@ -259,8 +261,8 @@ header {
 .profile-picture {
     width: 40%;
     max-width: 300px;
-    float: left;
-    margin-left: 100px;
+    float: right;
+    margin-right: 50px;
 }
 
 .profile-picture img{
@@ -271,6 +273,7 @@ header {
     margin-left: 0px;
     transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
     border-radius: 3px;
+    filter: brightness(120%)
     
 }
  
@@ -281,15 +284,20 @@ header {
         border-radius: 10px;
 }
 
-/* -----------------------------SECTIONS-------------------------- */ 
-
-.section-form {
-    margin-top: 60px;
-}
+/* ---------------------------SECTIONS-------------------------- */ 
 
 .section-map{
-    background-color: rgba(208, 208, 208, 0.34);
+    padding-bottom: 60px;
+    background-color: rgba(209, 198, 198, 0.34);
 }
+
+.section-form {
+    margin-top: 100px;
+    margin-bottom: 60px;
+    
+}
+
+
 
 
 
